# python-fast-api

./: .flake8  main.py
.github/workflows/: flake8-validation.yml
back-end/: pyproject.toml
back-end/projeto_fast_api/: main.py
projeto_fast_api/src/: schemas.py
projeto_fast_api/src/controllers/: user_controller.py
src/: app.py  models.py  schemas.py
src/controllers/: tags.py  user_controller.py
